--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -12,5 +12,6 @@
 <script type="module" src="index.ts"></script>
 <script type="text/json" id="langJson"><!-- lang --></script>
 <script type="text/json" id="optionsJson"><!-- options --></script>
+<script type="text/json" id="sessionJson"><!-- session --></script>
 </body>
 </html>
