Add rudimentary study creation

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -5,6 +5,7 @@
 	<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 	<link rel="preload stylesheet" href="/style.css" as="style">
 	<link rel="preload stylesheet" href="/forms.css" as="style">
+	<link rel="preload stylesheet" href="/design.css" as="style">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Vite + TS</title>
 </head>
