--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -7,7 +7,7 @@
 	<link rel="preload stylesheet" href="/forms.css" as="style">
 	<link rel="preload stylesheet" href="/design.css" as="style">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Vite + TS</title>
+	<title>SciDataSeal</title>
 </head>
 <body>
 <div id="site"></div>
