Add project icon

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8" />
-	<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 	<link rel="preload stylesheet" href="/style.css" as="style">
 	<link rel="preload stylesheet" href="/forms.css" as="style">
 	<link rel="preload stylesheet" href="/design.css" as="style">
